# google-calendar-api

./: .gitignore  README.MD  auth.py  config.toml  main.py  pyproject.toml  quickstart.py  renderer.py  requirements-to-freeze.txt  requirements.txt  test_display.py
deploy/: auth.sh  gcal-epd.service  gcal-epd.timer  install.sh  setup.sh
src/gcal_epd/: __init__.py  auth.py  calendar_client.py  epd.py  main.py  setup.py
src/gcal_epd/render/: draw.py  layout.py
